tests/baselines/reference/classWithOptionalParameter.errors.txt
==== tests/cases/compiler/classWithOptionalParameter.ts (13 errors) ====
    // classes do not permit optional parameters, these are errors
    
    class C {
        x?: string;
         ~
!!! error TS1005: ';' expected.
          ~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
        f?() {}
         ~
!!! error TS1005: ';' expected.
          ~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
             ~
!!! error TS1005: '=>' expected.
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    class C2<T> {
        x?: T;
         ~
!!! error TS1005: ';' expected.
          ~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
        f?(x: T) {}
         ~
!!! error TS1005: ';' expected.
          ~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
                 ~
!!! error TS1005: '=>' expected.
              ~
!!! error TS2095: Could not find symbol 'T'.
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.